Fixed the CSS so that the reset button is vertically aligned in the footer

--- a/todo.css
+++ b/todo.css
@@ -124,11 +124,19 @@ body{
     cursor:pointer;
 }
 
+#footer{
+    position:relative;
+}
+
 #todorefresh{
     background:rgba(0,0,0,0.4);
+    position:absolute;
+    height:12px;
+    top:50%;
+    right:2px;
     font-size:10px;
+    margin-top: -6px;
     padding:2px 4px;
-    float:right;
     -webkit-border-radius:5px;
     -moz-border-radius:5px;
     -ms-border-radius:5px;
